partially add style to header and filter component

--- a/src/containers/MissionList.css
+++ b/src/containers/MissionList.css
@@ -1,8 +1,10 @@
-
+.launches-div {
+    color:white;
+}
 .launches-list {
     list-style: none;
     display:flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
 }
 
 .launches-list img {
