--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,7 +5,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: cornflowerblue;
+    background-color: #011b35;
     padding-bottom: 10px;
 }
 
@@ -15,29 +15,29 @@ header {
 }
 
 .logo-div img {
-    width:100px;
+    max-width:100px;
+    max-height:100px;
+    margin-left: 10px
 }
 
 .logo-div h1{
     margin-left: 0.5rem;
     color:rgb(243, 190, 44);
-    /* color: aliceblue; */
-
 }
 
 .route-div {
     display:flex;
+    word-break: break-all;
 }
 
 .route-div a{
-    color:aliceblue;
     text-decoration-line:none ;
 }
 
 .route-div a p {
     margin-right: 1em;
-    color:white;
-    font-size: 1.7em;
+    color:#d3d8de;
+    font-size: 1.4em;
     text-decoration-line: none;
     font-family: 'Muli', sans-serif;  
     font-weight: bold;
