--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+
+html {
+  height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +14,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body
+{
+margin:0px;
+padding:0px;
+width:100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
