--- a/src/containers/MissionList.css
+++ b/src/containers/MissionList.css
@@ -28,6 +28,13 @@
 .launch-buttondiv a button {
     background-color: transparent;
     border: none; 
+    border-radius:10%;
+    padding:10px;
+}
+
+.launch-buttondiv a button:hover {
+    background-color: rgba(1, 27, 53,0.5);
+    cursor:pointer;
 }
 
 .launch-title {
