--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
+html, body {
+  height: 100%;
+}
+
 
 html {
-  height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
 }
 
 body
