finish first version media queries

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,12 +4,12 @@
 footer {
     background-color: #011b35;
     font-family: 'Muli', sans-serif;
-    font-size: 1.vw;
-    position: fixed;
+    font-size: 1.4vw;
+    position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -30px;
     width:100%;
-    height: 9vh;
+    height: 8vh;
     display: flex;
     justify-content: center;
     align-items: center
