--- a/src/components/About.css
+++ b/src/components/About.css
@@ -6,11 +6,14 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.1em;
+    margin: 0 13px;
+    font-size:1.2em;
 }
 
 .about-div h2{
     margin-bottom:0;
+    margin-top: 11px;
+    font-size: 2em
 }
 
 .about-div p {
@@ -36,4 +39,15 @@ color: #d3d8de
     display: inline-block;
     width: 1em; 
     margin-left: -1em
+}
+
+@media only screen and (max-width: 767px) {
+    .about-div ul {
+        width:70%;
+    }
+
+    .about-div h2{
+        font-size: 1.6em
+    }
+    
 }
