--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,12 +12,12 @@ header {
 .logo-div {
     display:flex;
     font-family: 'Poppins', sans-serif;
-    width:50%;
+    width:75%;
     align-items: center
 }
 
 .logo-div img {
-    max-width:16%;
+    max-width:12%;
     height:auto;
     margin-left: 10px
 }
@@ -25,7 +25,7 @@ header {
 .logo-div h1{
     margin-left: 0.5rem;
     color:rgb(243, 190, 44);
-    font-size: 2.6vw;
+    font-size: 2.4em;
     margin:0;
 }
 
@@ -33,7 +33,7 @@ header {
     display:flex;
     word-break: break-all;
     align-items: center;
-    width: 50%;
+    width: 25%;
     justify-content: flex-end;
 }
 
@@ -60,3 +60,52 @@ header {
     color: rgb(243, 190, 44);
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 767px) {
+    header {
+        flex-direction: column;
+    }
+
+    .logo-div {
+        width:100%;
+        justify-content: center;
+    }
+
+    .logo-div img {
+        display:none;
+    }
+
+    .logo-div h1{ 
+        font-size: 1.8em;
+    }
+
+    .route-div {
+        width:100%;
+        justify-content: center;
+    }
+
+    .route-div a p {
+        font-size: 1.2em;
+        margin-right:20px!important;
+        margin-top: 0;
+        margin-bottom: 3px ;
+
+    }
+
+}
+
+
+@media only screen and (min-width: 768px) {
+    .logo-div h1{
+        font-size: 2.1em;
+    }
+
+    
+}
+
+@media only screen and (min-width: 992px) {
+    .logo-div h1{
+        font-size: 2.4em;
+    }
+
+}
