--- a/src/containers/Mission.css
+++ b/src/containers/Mission.css
@@ -14,7 +14,7 @@ body {
 .mission-div h2 {
     text-align: center;
     letter-spacing: 1.5px;
-    font-size: 2.8vw;
+    font-size: 2.4em;
     margin-bottom: 0;
 }
 
@@ -24,10 +24,11 @@ body {
 
 .mission-data {
     list-style: none;
-    font-size:1.9vw;
+    font-size: 1.5em;
     padding: 0;
     width:50%;
     padding-left:8px;
+    margin-left: 15px
 }
 
 .mission-data li {
@@ -67,11 +68,18 @@ body {
         padding-right: 10px
     }
     .mission-data {
-        width:100%;
-        column-count: 2;
+        width: 80%;
+        margin: 0 auto;
+        font-size:1.2em
     }   
 
+    .mission-div h2 {
+        font-size:1.5em
+    }
     .video-div {
         width:100%
     }
 }
+
+/* @media only screen and (min-width: 768px) {
+} */
