--- a/src/containers/MissionList.css
+++ b/src/containers/MissionList.css
@@ -9,21 +9,20 @@
     display:flex;
     flex-wrap: wrap;
     padding:0;
-    justify-content: center;
 }
 
 .launches-list img {
-    width: 100%;
-    height:auto;
-
+    width: 256px;
+    height: 256px;
 }
 
 .launch {
-    width:25%;
+    flex: 1 0 21%;
 }
 
 .launch-buttondiv {
     text-align:center;
+    margin: 12px 0;
 }
 
 .launch-buttondiv a button {
@@ -40,8 +39,6 @@
 
 .launch-title {
     text-align: center;
-    font-size: 2.1vw;
+    font-size: 1.8em;
     color: rgb(243, 190, 44);
-    word-break: break-all;
-    margin: 2px 1px;
 }
